more features + init tests